CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
PROJECT(TinyServer)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

INCLUDE_DIRECTORIES({CMAKE_CURRENT_SOURCE_DIR}/jeayeson/include)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)

SET(SERVER_LIBRARIES server CACHE INTERNAL "")
SET(SERVER_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include CACHE INTERNAL "")

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(echo)
ADD_SUBDIRECTORY(chatRoom)
