INCLUDE_DIRECTORIES(${SERVER_INCLUDE_DIRS})

ADD_EXECUTABLE(CGI CGI.cpp)
ADD_EXECUTABLE(Main Main.cpp)
TARGET_LINK_LIBRARIES(Main ${SERVER_LIBRARIES} pthread)

IF(${CMAKE_BUILD_TYPE} MATCHES "release")
	SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-O2")
ELSE()
	SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-Wall -W -Wextra -O0 -ggdb3")
ENDIF()
