INCLUDE_DIRECTORIES(${SERVER_INCLUDE_DIRS})

ADD_EXECUTABLE(Server Server.cpp)
ADD_EXECUTABLE(Client client.cpp)
TARGET_LINK_LIBRARIES(Server ${SERVER_LIBRARIES} pthread)
TARGET_LINK_LIBRARIES(Client ${SERVER_LIBRARIES})

IF(${CMAKE_BUILD_TYPE} MATCHES "release")
	SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-O2")
ELSE()
	SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-Wall -W -Wextra -O0 -ggdb3")
ENDIF()
