INCLUDE_DIRECTORIES(${SERVER_INCLUDE_DIRS})

ADD_EXECUTABLE(FIFOServer Server.cpp)
ADD_EXECUTABLE(FIFOClientA ClientA.cpp)
ADD_EXECUTABLE(FIFOClientB ClientB.cpp)
TARGET_LINK_LIBRARIES(FIFOServer ${SERVER_LIBRARIES})
TARGET_LINK_LIBRARIES(FIFOClientA ${SERVER_LIBRARIES})
TARGET_LINK_LIBRARIES(FIFOClientB ${SERVER_LIBRARIES})
